--- a/package.json
+++ b/package.json
@@ -72,18 +72,17 @@
     ]
   },
   "dependencies": {
-    "@chakra-ui/card": "^2.1.6",
-    "@chakra-ui/checkbox": "^2.2.10",
-    "@chakra-ui/icons": "^2.0.17",
-    "@chakra-ui/layout": "^2.1.15",
-    "@chakra-ui/menu": "^2.1.8",
-    "@chakra-ui/pro-theme": "^0.0.57",
-    "@chakra-ui/react": "^2.4.9",
-    "@chakra-ui/system": "^2.3.8",
-    "@chakra-ui/theme": "^2.2.5",
-    "@chakra-ui/theme-tools": "^2.0.17",
-    "@chakra-ui/transition": "^2.0.15",
-    "@chakra-ui/utils": "^2.0.15",
+    "@chakra-ui/card": "^2.2.0",
+    "@chakra-ui/checkbox": "^2.3.2",
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/layout": "^2.3.1",
+    "@chakra-ui/menu": "^2.2.1",
+    "@chakra-ui/pro-theme": "^0.10.0",
+    "@chakra-ui/react": "^2.8.2",
+    "@chakra-ui/system": "^2.6.2",
+    "@chakra-ui/theme": "^3.3.1",
+    "@chakra-ui/theme-tools": "^2.1.2",
+    "@chakra-ui/transition": "^2.1.0",
     "@day1co/fastcase": "github:garrylachman/fastcase#main",
     "@electrocrud/buttons": "link:./packages/buttons",
     "@electrocrud/feedback": "link:./packages/feedback",
@@ -93,82 +92,80 @@
     "@electrocrud/tables": "link:./packages/tables",
     "@electrocrud/tabs": "link:./packages/tabs",
     "@electrocrud/utils": "link:./packages/utils",
-    "@emotion/cache": "^11.7.1",
+    "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
-    "@faker-js/faker": "^7.6.0",
-    "@fontsource/dm-sans": "^4.5.9",
-    "@fontsource/poppins": "^4.5.10",
-    "@highoutput/hds": "^0.1.67",
-    "@highoutput/hds-alerts": "^0.1.8",
-    "@highoutput/hds-icons": "^0.1.31",
-    "@highoutput/hds-spinner": "^0.1.14",
-    "@highoutput/hds-utilities": "^0.1.9",
-    "@hookform/resolvers": "^2.9.10",
-    "@inovua/reactdatagrid-community": "^5.8.0",
-    "@jeash/knex-meta": "^1.2.12",
-    "@reduxjs/toolkit": "^1.9.0",
-    "@saas-ui/forms": "^1.5.2",
-    "@saas-ui/react": "^1.9.0",
-    "@tanstack/react-table": "^8.5.13",
+    "@faker-js/faker": "^8.4.1",
+    "@fontsource/dm-sans": "^5.0.19",
+    "@fontsource/poppins": "^5.0.12",
+    "@highoutput/hds": "^0.3.34",
+    "@highoutput/hds-alerts": "^0.3.9",
+    "@highoutput/hds-icons": "^0.2.4",
+    "@highoutput/hds-spinner": "^0.2.6",
+    "@highoutput/hds-utilities": "^0.1.16",
+    "@hookform/resolvers": "^3.3.4",
+    "@inovua/reactdatagrid-community": "^5.10.2",
+    "@jeash/knex-meta": "^4.1.8",
+    "@reduxjs/toolkit": "^2.2.2",
+    "@saas-ui/forms": "^2.4.1",
+    "@saas-ui/react": "^2.6.2",
+    "@tanstack/react-table": "^8.15.0",
     "@trodi/electron-splashscreen": "^1.0.2",
-    "@uiw/react-markdown-editor": "^5.10.1",
+    "@uiw/react-markdown-editor": "^6.1.0",
     "add": "^2.0.6",
     "arc-hash": "^3.0.0",
     "chroma-js": "^2.4.2",
     "crypto-browserify": "^3.12.0",
-    "crypto-js": "^4.1.1",
+    "crypto-js": "^4.2.0",
     "electron-debug": "^3.2.0",
-    "electron-log": "^4.4.8",
+    "electron-log": "^5.1.2",
     "electron-squirrel-startup": "^1.0.0",
-    "flatted": "^3.2.7",
-    "framer-motion": "^9.0.2",
-    "get-current-line": "^6.6.0",
-    "get-port": "5.1.1",
+    "flatted": "^3.3.1",
+    "framer-motion": "^11.0.22",
+    "get-current-line": "^7.4.0",
+    "get-port": "7.1.0",
     "javascript-time-ago": "^2.5.9",
-    "joi": "^17.7.0",
-    "knex": "^2.4.2",
+    "joi": "^17.12.2",
+    "knex": "^3.1.0",
     "knex-json-filter": "^0.1.2",
     "knex-schema-inspector": "github:garrylachman/knex-schema-inspector",
     "markdown-loader": "^8.0.0",
-    "marked": "^4.2.5",
-    "moment": "^2.29.4",
-    "mysql2": "^3.1.2",
-    "node-ts-cache": "^4.4.0",
-    "node-ts-cache-storage-memory": "^4.4.0",
-    "object-hash": "^3.0.0",
-    "performant-array-to-tree": "^1.11.0",
-    "pg": "^8.9.0",
-    "pg-query-stream": "^4.3.0",
-    "proxy-memoize": "^1.2.0",
-    "ramda": "^0.28.0",
-    "react": "^18.0.0",
-    "react-animated-text-content": "^1.0.1",
-    "react-beautiful-dnd": "^13.1.1",
-    "react-dom": "^18.0.0",
-    "react-hook-form": "^7.39.3",
-    "react-icons": "^4.3.1",
-    "react-is": "^18.0.0",
-    "react-modal-promise": "^1.0.2",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.4.3",
-    "react-time-ago": "^7.2.1",
-    "react-typist": "^2.0.5",
-    "redux-logger": "^3.0.6",
-    "redux-persist": "^6.0.0",
-    "redux-saga": "^1.2.1",
-    "reflect-metadata": "^0.1.13",
-    "sqlite3": "^5.1.4",
-    "ssh-tunneling": "^1.1.17",
-    "stream-browserify": "^3.0.0",
-    "styled-components": "^5.3.6",
-    "tedious": "^15.1.2",
-    "ts-toolbelt": "^9.6.0",
-    "typedi": "^0.10.0",
-    "underscore": "^1.13.6",
-    "usehooks-ts": "^2.9.1",
-    "uuid": "^9.0.0",
-    "yup": "^0.32.11"
+    "marked": "^12.0.1",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
+    "next-cookie": "^2.8.0",
+    "node-dynamic-require": "^1.0.7",
+    "node-ssh": "^14.0.0",
+    "prettier": "^3.2.5",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
+    "react-draggable": "^4.4.6",
+    "react-draft-wysiwyg": "^1.15.0",
+    "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.51.2",
+    "react-image-gallery": "^1.3.0",
+    "react-lazy-load-image-component": "^1.6.0",
+    "react-markdown": "^9.0.1",
+    "react-modal": "^3.16.1",
+    "react-quill": "^2.0.0",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.3",
+    "react-toastify": "^10.0.5",
+    "react-tooltip": "^5.26.3",
+    "redux": "^5.0.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^3.1.0",
+    "sass": "^1.72.0",
+    "serialize-javascript": "^6.0.2",
+    "short-uuid": "^4.2.2",
+    "stripe": "^14.22.0",
+    "terser-webpack-plugin": "^5.3.10",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths-webpack-plugin": "^4.1.0",
+    "typescript": "^5.4.3",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "yarn": "^3.5.1"
   },
   "peerDependencies": {
     "@chakra-ui/system": "2.4.0",
@@ -176,136 +173,49 @@
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.4.4",
-    "@commitlint/config-conventional": "^17.4.4",
-    "@electron-forge/cli": "^6.1.1",
-    "@electron-forge/maker-deb": "^6.1.1",
-    "@electron-forge/maker-dmg": "^6.1.1",
-    "@electron-forge/maker-flatpak": "^6.1.1",
-    "@electron-forge/maker-rpm": "^6.1.1",
-    "@electron-forge/maker-snap": "^6.1.1",
-    "@electron-forge/maker-squirrel": "^6.1.1",
-    "@electron-forge/maker-zip": "^6.1.1",
-    "@electron-forge/plugin-webpack": "^6.1.1",
-    "@electron-forge/publisher-github": "^6.1.1",
-    "@jest/globals": "^29.4.1",
-    "@octokit/auth-action": "^2.0.4",
-    "@octokit/core": "^4.2.1",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
-    "@reforged/maker-appimage": "^3.1.8",
-    "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/commit-analyzer": "^9.0.2",
-    "@semantic-release/exec": "^6.0.3",
-    "@semantic-release/git": "^10.0.1",
-    "@semantic-release/github": "^8.0.7",
-    "@semantic-release/npm": "^10.0.3",
-    "@semantic-release/release-notes-generator": "^11.0.1",
-    "@sqltools/formatter": "^1.2.5",
-    "@svgr/webpack": "^6.3.1",
-    "@swc-node/jest": "^1.6.1",
-    "@swc/core": "^1.3.35",
-    "@teamsupercell/typings-for-css-modules-loader": "^2.5.1",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
-    "@types/chroma-js": "^2.1.4",
-    "@types/crypto-js": "^4.1.1",
-    "@types/dockerode": "^3.3.14",
-    "@types/jest": "^29.4.0",
-    "@types/lodash": "^4.14.188",
-    "@types/marked": "^4.0.8",
-    "@types/node": "18.7.6",
-    "@types/object-hash": "^3.0.2",
-    "@types/ramda": "^0.28.20",
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
-    "@types/react-test-renderer": "^18.0.0",
-    "@types/react-typist": "^2.0.3",
-    "@types/redux-logger": "^3.0.9",
-    "@types/terser-webpack-plugin": "^5.0.4",
-    "@types/testing-library__jest-dom": "^5.14.5",
-    "@types/underscore": "^1.11.4",
-    "@types/uuid": "^8.3.4",
-    "@types/webpack-bundle-analyzer": "^4.6.0",
-    "@typescript-eslint/eslint-plugin": "^5.50.0",
-    "@typescript-eslint/parser": "^5.50.0",
-    "@vercel/webpack-asset-relocator-loader": "^1.7.3",
-    "chakra-react-select": "^4.4.0",
-    "chalk": "^4.1.2",
-    "commitizen": "^4.3.0",
-    "core-js": "^3.24.1",
+    "@babel/core": "^7.24.3",
+    "@babel/plugin-proposal-class-properties": "^7.16.12",
+    "@babel/preset-env": "^7.24.3",
+    "@babel/preset-react": "^7.24.1",
+    "@commitlint/cli": "^19.2.1",
+    "@commitlint/config-conventional": "^19.1.0",
+    "@craco/craco": "^7.1.0",
+    "@types/node": "^20.11.30",
+    "@typescript-eslint/eslint-plugin": "^7.4.0",
+    "@typescript-eslint/parser": "^7.4.0",
+    "babel-loader": "^9.1.3",
+    "clean-webpack-plugin": "^4.0.0",
     "cross-env": "^7.0.3",
-    "css-loader": "^6.7.3",
-    "cz-conventional-changelog": "^3.3.0",
-    "docker-compose": "^0.24.1",
-    "dockerode": "^3.3.4",
-    "dockerode-compose": "^1.3.2",
-    "electron": "^22.0.0",
-    "electron-builder": "^23.6.0",
-    "electron-devtools-installer": "^3.2.0",
-    "electron-mock-ipc": "^0.3.12",
-    "eslint": "^8.28.0",
+    "css-loader": "^6.10.0",
+    "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^3.4.1",
-    "eslint-import-resolver-webpack": "^0.13.2",
-    "eslint-plugin-compat": "^4.0.2",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jest": "^26.8.3",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-react": "^7.31.11",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-webpack": "^0.13.8",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-testing-library": "^5.10.1",
-    "eslint-plugin-unicorn": "^47.0.0",
     "file-loader": "^6.2.0",
-    "fork-ts-checker-webpack-plugin": "^8.0.0",
-    "html-loader": "^4.2.0",
-    "html-webpack-plugin": "^5.5.0",
-    "husky": "^8.0.1",
-    "install": "^0.13.0",
-    "jest": "^29.4.2",
-    "jest-environment-jsdom": "^29.4.2",
-    "jest-watch-typeahead": "^2.2.2",
-    "lerna": "^6.6.2",
-    "lerna-changelog": "^2.2.0",
-    "lint-staged": "^13.0.3",
-    "lodash": "^4.17.21",
-    "node-gyp": "^9.3.1",
-    "node-loader": "^2.0.0",
-    "octokit": "^2.0.18",
-    "path-browserify": "^1.0.1",
-    "prettier": "^2.7.1",
-    "raw-loader": "^4.0.2",
+    "html-webpack-plugin": "^5.6.0",
+    "husky": "^9.0.11",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom-sixteen": "^1.0.3",
+    "mini-css-extract-plugin": "^2.8.1",
+    "postcss": "^8.4.38",
+    "postcss-loader": "^8.1.1",
+    "prettier": "^3.2.5",
     "react-refresh": "^0.14.0",
-    "react-test-renderer": "^18.2.0",
-    "sass": "^1.54.4",
-    "sass-loader": "^13.0.2",
-    "semantic-release": "^21.0.2",
-    "style-loader": "^3.3.1",
-    "terser-webpack-plugin": "^5.3.5",
-    "ts-jest": "^29.0.5",
-    "ts-loader": "^9.4.2",
-    "ts-node": "^10.9.1",
-    "tsconfig-paths-webpack-plugin": "^4.0.0",
-    "tsup": "^6.7.0",
-    "typescript": "^4.9.3",
-    "url-loader": "^4.1.1",
-    "webpack": "^5.83.1",
-    "webpack-bundle-analyzer": "^4.6.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.10.0",
-    "webpack-merge": "^5.8.0"
+    "style-loader": "^3.3.4",
+    "terser-webpack-plugin": "^5.3.10",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.4.3",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
   },
   "resolutions": {
-    "react-error-overlay": "6.0.9",
-    "@types/react": "18.0.17",
-    "@types/react-dom": "18.0.6",
-    "ts-toolbelt": "9.6.0",
-    "@chakra-ui/system": "2.4.0",
-    "webpack": "5.83.1"
+    "@babel/preset-env": "^7.17.0"
   },
   "devEngines": {
     "node": ">=18.x"
